--- a/OpenAI API KEY.env
+++ b/OpenAI API KEY.env
@@ -1,2 +1,2 @@
 # .env 파일 내용
-OPENAI_API_KEY="1234"
+OPENAI_API_KEY="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"
